lines closing price

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     fill: steelblue;
     clip-path: url(#clip);
   }
+  .line {
+    fill: none;
+    stroke: steelblue;
+    clip-path: url(#clip);
+  }
 
   .zoom {
     cursor: move;
     fill: none;
     pointer-events: all;
   }
+
 </style>
 <body>
     <div class="container">
