--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     stroke: steelblue;
     clip-path: url(#clip);
   }
+  .balance-line {
+    fill: none;
+    stroke: green;
+    clip-path: url(#clip);
+  }
 
   .zoom {
     cursor: move;
@@ -28,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Hello</h1>
+                <h1 id="titre">Hello</h1>
                 <svg></svg>
             </div>
         </div>
